Fix handling of null returned from _runRules

https://bugs.freedesktop.org/show_bug.cgi?id=63575